no parecia haber actualizado

--- a/www/index.html
+++ b/www/index.html
@@ -48,9 +48,7 @@
 				if (status == google.maps.GeocoderStatus.OK)
 				{
 					if (results[0]) 
-					{ 
-
-						//alert(JSON.stringify(results.length));
+					{ //alert(JSON.stringify(results.length));
 						/*for(var i=0;i<results.length;i++){
 							//Creamos una nueva latlng para situar un punto en el mapa
 							
