--- a/www/index.html
+++ b/www/index.html
@@ -57,9 +57,9 @@
 								map: map,
 								title: 'Punto numero '+i
 							  });
-						}
-						//alert(JSON.stringify(results[i]));
-						return;*/
+						}*/
+						/*alert(JSON.stringify(results[i]));return;*/
+						
 						dir = "<p><strong>Dirección: </strong>" + results[0].formatted_address + "</p>";
 						dir += '<p><strong>address_components.short_name:</strong>'+results[0].address_components[0]['short_name']+'</p>';
 						dir += '<p><strong>address_components.short_name:</strong>'+results[0].address_components[0]['long_name']+'</p>';
